implemented search by author. implemented list by letter

--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -1,3 +1,5 @@
-<div>
-  <%= render template: "authors/show" %>
-</div>
+<% @authors.each do |author| %>
+  <div><%= author.name %></div>
+<% end %>
+
+<%= @abc %>
