--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,7 @@
   </head>
   <body>
 
-    <div class="wrapper">
-
+    <div class="wrapper container-fluid">
       <header class="p-2 bg-color-header text-white fs-4 text">
         <div class="container-fluid">
           <div class="d-flex flex-wrap align-items-center justify-content-between justify-content-lg-between">
@@ -50,7 +49,6 @@
       <footer class="footer text-center">
         Footer      
       </footer>
-
     </div>
   </body>
 </html>
