--- a/app/assets/stylesheets/column.css
+++ b/app/assets/stylesheets/column.css
@@ -6,7 +6,7 @@
 .column-left {
   display: grid;
   grid-template-rows: auto;
-  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  border: 1px solid black;
 }
 
 .column-center {
@@ -18,10 +18,20 @@
   gap: 15px;
 }
 
-.column-right {
-  grid-template-rows: auto;
+.column-center-one {
   display: grid;
-  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  grid-template-columns: repeat(6, 1fr);
+  align-items: center;
+  justify-items: center;
+  border: 0.1px solid gainsboro;
+  padding: 10px;
+  gap: 15px;
+}
+
+.column-right {
+  display: grid;
+  grid-template-rows: auto;
+  border: 1px solid black;
 }
 
 .border-column {
