--- a/app/views/users/_songs.html.erb
+++ b/app/views/users/_songs.html.erb
@@ -1,3 +1,3 @@
 <% @user.songs.each do |song| %>
-  <%= link_to song.title, song_path(song.id) %>
+  <%= link_to song.title, song_path(song) %>
 <% end %>
