added and correct views user-song

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
       </main>
 
       <footer class="footer text-center">
-        Footer      
+        @ Медвежий слух - 2022
       </footer>
     </div>
   </body>
