--- a/app/assets/stylesheets/content.css
+++ b/app/assets/stylesheets/content.css
@@ -13,6 +13,9 @@ body {
   min-height: 100%;
   display: flex;
   flex-direction: column;
+  background-color: rgb(255, 255, 255);
+  padding: 0;
+
 }
 
 .main {
