OmniAuth for google

--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -19,8 +19,18 @@
   <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name) %>
 <% end %>
 
-<%- if devise_mapping.omniauthable? %>
-  <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), method: :post %><br />
-  <% end %>
-<% end %>
+<div class="mt-5">
+  <div class="btn-omniauth mr-1">
+    <%- if devise_mapping.omniauthable? %>
+      <%- resource_class.omniauth_providers.each do |provider| %>
+        <% case provider %>
+        <% when :google_oauth2 %>
+          <div class="btn-indent"><%= link_to "image_tag('google1.png')", omniauth_authorize_path(resource_name, provider) %></div>
+        <% when :mail_ru %>
+          <div class="btn-indent"><%= link_to "image_tag('mail1.png')", omniauth_authorize_path(resource_name, provider) %></div>
+        <% when :github %>
+          <div class="btn-indent"><%= link_to "image_tag('git1.png')", omniauth_authorize_path(resource_name, provider) %></div>
+        <% end  %>
+      <% end %>
+    <% end %>
+</div>
