correct user registration v.1.0

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -50,7 +50,7 @@
       <div class="form-group mb-3">
         <%= f.label :gender, class: 'col-sm-2 control-label'  %>
         <div class="col-sm-12">
-          <%= f.select :gender, ["man", "woman"], autofocus: true, class: 'form-edit'  %>
+          <%= f.select :gender, ["мужской", "женский", "не важно"], autofocus: true, class: 'form-edit'  %>
         </div>
       </div>
 
