--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -52,7 +52,7 @@
       </div>
 
       <div class="field mt-2">
-        <div><%= f.select :gender, ["мужской", "женский", "троепол"] %></div>
+        <div><%= f.select :gender, ["мужской", "женский", "не важно"] %></div>
       </div>
       
       <div class="actions-field mt-3">
