OmniAuth for google correct

--- a/app/assets/stylesheets/avatar.css
+++ b/app/assets/stylesheets/avatar.css
@@ -13,3 +13,14 @@
   width: 160px;
   height: 70px;
 }
+
+.omni-img {
+  width: 40px;
+  height: 30px;
+  filter: grayscale(1);
+  transition: 1s;
+}
+
+.omni-img:hover {
+  filter: grayscale(0);
+}
