--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,17 +10,15 @@
     <!-- Font-Awesome -->
     <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
   </head>
+  
   <body>
     <div class="wrapper container-fluid">
-      <header class="p-2 bg-white text-black fs-4 text">
+      <header class="p-2 bg-white text-black fs-6 text">
         <div class="container-fluid">
           <div class="d-flex flex-wrap align-items-center justify-content-between justify-content-lg-between">
-            <%= link_to image_tag("logo-black.png", class: "logo-img"), root_path %>
+            <%= link_to image_tag("logo-black.png", class: "logo-img ms-5"), root_path %>
 
-        <div class="m-1">
-        </div>
-
-        <div class="text-end">
+        <div class="text-end me-5">
           <% if user_signed_in? %>
             <%= omni_auth(@user) %>
             <%= link_to "Личный кабинет", current_user, data: { turbo: false },  class: "btn btn-light" %>
@@ -34,7 +32,8 @@
       </div>
     </div>
   </header>
-  <header class="p-2 bg-color-header text-white fs-4 text">
+
+  <div class="bg-color-header text-white fs-6 text">
     <div class="container-fluid">
       <div class="d-flex flex-wrap align-items-center justify-content-between justify-content-lg-between">
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
@@ -42,21 +41,21 @@
           <li><%= link_to "Топ 100", root_path , class: "nav-link px-2 text-white" %></li>
           <li><%= link_to "О нас", root_path , class: "nav-link px-2 text-white" %></li>
         </ul>
+        <div class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+          <p class="m-1 nav-link"><%= link_to "Все", song_all_path, class: "a-white" %></p>
+          <p class="m-1 nav-link"><%= link_to "Популярные", root_path, class: "a-white"%></p>
+          <p class="m-1 nav-link"><%= link_to "По жанрам", root_path, class: "a-white"%></p>
+          <p class="m-1 nav-link"><%= link_to "По исполнителям", authors_path, class: "a-white" %> </p>
+          <p class="m-1 nav-link"><%= link_to "Добавить", root_path, class: "a-white" %></p>
+          <p class="m-1 nav-link"><%= link_to "Изучение", root_path, class: "a-white" %></p>
+        </div>
         <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
           <%= render "results/search_form" %>
         </form>
-        <div class="text-end">
-          <% if user_signed_in? %>
-            <%= link_to "Личный кабинет", current_user, data: { turbo: false },  class: "btn btn-light" %>
-            <%= link_to "Выход", destroy_user_session_path, method: :delete, data: { turbo: false }, class: "btn btn-secondary" %>
-          <% else %>
-            <%= link_to "Авторизация", new_user_registration_path,  class: "btn btn-light" %>
-            <%= link_to "Вход", new_user_session_path,  class: "btn btn-secondary" %>
-          <% end %>
-        </div>
       </div>
     </div>
-  </header>
+  </div>
+
   <%= render "devise/shared/flash" %>
   <main class="main">
     <%= yield %>
