--- a/app/assets/stylesheets/link.css
+++ b/app/assets/stylesheets/link.css
@@ -7,10 +7,22 @@ a.color-blue {
   text-decoration: none;
 }
 
+a.color-black {
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+}
+
+a.color-black:hover {
+  background-color:  rgb(123, 123, 123);
+  border-radius: 50%;
+  padding: 10px;
+  color: rgb(255, 255, 255);
+}
+
 a.color-blue:hover {
   border: 1px solid burlywood;
   background-color: burlywood;
-  border-radius: 30%;
+  border-radius: 50%;
   padding: 10px;
   color: rgb(255, 255, 255);
 }
