--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
   
   <body>
-    <div class="wrapper container-fluid">
+    <div class="wrapper">
       <header class="p-2 bg-white text-black fs-6 text">
         <div class="container-fluid">
           <div class="d-flex flex-wrap align-items-center justify-content-between justify-content-lg-between">
@@ -57,9 +57,11 @@
   </div>
 
   <%= render "devise/shared/flash" %>
-  <main class="main">
-    <%= yield %>
-  </main>
+
+    <main class="main">
+      <%= yield %>
+    </main>
+    
   <footer class="footer text-center">
     @ Медвежий слух - 2022
   </footer>
