--- a/app/views/songs/song_all.html.erb
+++ b/app/views/songs/song_all.html.erb
@@ -1,5 +1,5 @@
-<div class="title-registration text-center fs-4 text mt-1">
-  <p>Все песни</p>
+<div class="bg-light text-center fs-4 text mt-1">
+  Все аккорды
 </div>
 
 <div class="column-center-one m-2 text-list-home">
