--- a/app/views/songs/user_song_all.html.erb
+++ b/app/views/songs/user_song_all.html.erb
@@ -1,68 +1,55 @@
-<div class="container">
-  <div class="row">
-    <div class="col">
-
-      <div class="title-add text-center fs-4 text mt-1">
-        Ваши добавленные аккорды
-      </div>
-
-      <div class="row">
-        <div class="btn-group">
-          <button class="btn btn-success m-1" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample1" aria-expanded="false" aria-controls="multiCollapseExample1">Знаю</button>
-          <button class="btn btn-warning m-1" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Учу</button>
-          <button class="btn btn-primary m-1" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample3" aria-expanded="false" aria-controls="multiCollapseExample3">Архив</button>
-          <button class="btn btn-primary m-1" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample4" aria-expanded="false" aria-controls="multiCollapseExample4">Весь список</button>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          <% @songs.each do |song| %>
-            <% if song.teach == "знаю" %>
-              <div class="collapse multi-collapse" id="multiCollapseExample1">
-                <div class="card card-body">
-                  <p class="m-1 collapse" id="multiCollapseExample1">
-                  <%= link_to song.title, song_path(song) %>
-                  <%= link_to icon("pencil-fill"), edit_song_path(song) %>
-                  <%= link_to icon("trash-fill")%>
-                  <%= icon("check-circle-fill")%></p>
-              </div>
-            </div>
-          </div>
-        <% elsif song.teach == "буду учить" %>
-          <div class="col">
-            <div class="collapse multi-collapse" id="multiCollapseExample2">
-              <div class="card card-body">
-                <p class="m-1 collapse" id="multiCollapseExample2">
-                  <%= link_to song.title, song_path(song) %>
-                  <%= link_to icon("pencil-fill"), edit_song_path(song) %>
-                  <%= link_to icon("trash-fill")%></p>
-              </div>
-            </div>
-          </div>
-          <% elsif song.teach == "в архив" %>
-          <div class="col">
-            <div class="collapse multi-collapse" id="multiCollapseExample3">
-              <div class="card card-body">
-                <p class="m-1 collapse" id="multiCollapseExample3">
-                  <%= link_to song.title, song_path(song) %>
-                  <%= link_to icon("pencil-fill"), edit_song_path(song) %>
-                  <%= link_to icon("trash-fill")%>
-                  <%= link_to icon("archive-fill") %></p>
-              </div>
-            </div>
-          </div>
+<div class="accordion" id="accordionPanelsStayOpenExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+        Весь Список
+      </button>
+    </h2>
+    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+      <div class="accordion-body">
+        <% @songs.each do |song| %>
+          <p>
+            <%= link_to song.title, song_path(song) %>
+            <%= link_to icon("pencil-fill"), edit_song_path(song) %>
+            <%= link_to icon("trash-fill"), song_path(song),
+                data: {
+                turbo_method: "delete",
+                turbo_confirm: "Are you shure?" 
+                } %>
+            <%= choice_status(song) %></p>
         <% end %>
-        <div class="col">
-            <div class="collapse multi-collapse" id="multiCollapseExample4">
-              <div class="card card-body">
-                <p class="m-1 collapse" id="multiCollapseExample4">
-                  <%= link_to song.title, song_path(song) %>
-                  <%= link_to icon("pencil-fill"), edit_song_path(song) %>
-                  <%= link_to icon("trash-fill")%>
-                  <%= choice_status(song) %></p>
-              </div>
-            </div>
-          </div>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+        Учу
+      </button>
+    </h2>
+    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+      <% @songs.each do |song| %>
+        <% if song.teach == "буду учить" %>
+          <p><%= link_to song.title, song_path(song) %>
+            <%= link_to icon("pencil-fill"), edit_song_path(song) %>
+            <%= link_to icon("circle-fill")%></p>
+        <% end %>
+      <% end %>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+        Архив
+      </button>
+    </h2>
+    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+      <% @songs.each do |song| %>
+        <% if song.teach == "архив" %>
+          <p><%= link_to song.title, song_path(song) %>
+            <%= link_to icon("pencil-fill"), edit_song_path(song) %>
+            <%= link_to icon("trash-fill")%></p>
+        <% end %>
       <% end %>
     </div>
   </div>
