correct icons song

--- a/app/assets/stylesheets/link.css
+++ b/app/assets/stylesheets/link.css
@@ -53,3 +53,11 @@ a.fas.fa-solid.fa-house {
   background-color: aliceblue;
   color: #000;
 }
+
+a.text-decoration-none:hover {
+  border: white;
+  border-radius: 50%;
+  padding: 10px;
+  background-color: burlywood;
+  color: #000;
+}
