--- a/app/assets/stylesheets/content.css
+++ b/app/assets/stylesheets/content.css
@@ -18,6 +18,12 @@ body {
 
 }
 
+.form-control {
+  border-radius: 0px;
+  border: 1px solid rgba(8, 74, 121, 0.787);
+  background-color: rgb(255, 255, 255);
+}
+
 .border,
 .border-end,
 .border-right,
