added sass style for registration user

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="registraion-container">
 
-  <div class="errors_messages">
+  <div class="errors_messages mt-2">
     <%= render "devise/shared/error_messages", resource: resource %>
   </div>
 
@@ -64,4 +64,3 @@
   </div>
 
 </div>
-<%# <div class="btn-field-right"><%= render "devise/shared/links" %>
